removed extraneous variable thermCond

--- a/test2.ini
+++ b/test2.ini
@@ -1,4 +1,4 @@
-//s_x s_y s_z e_x e_y e_z temp conductivity
-0 0 0 30 30 30 20.0 .001
-2 2 1 3 3 2 56.7 0.05
-0 0 0 0 0 3 -10.0 3
+//s_x s_y s_z e_x e_y e_z temp
+0 0 0 30 30 30 20.0
+2 2 1 3 3 2 56.7
+0 0 0 0 0 3 -10.0
